# config/routes.rb
@@ -22,11 +22,17 @@ Rails.application.routes.draw do
       get '/professional_info', to: 'doctors_cabinet#professional_info'
       patch '/edit_doctor', to: 'doctors_cabinet#update'
 
+      # Advanced options for doctors
       get '/list_doctor_by_hospital',                        to: 'doctors#list_doctor_by_hospital'
       get '/canceled_appointments',                          to: 'doctors#canceled_appointments'
       post '/create_doctor',                                 to: 'doctors#create_doctor'
       post '/create_hospital',                               to: 'doctors#create_hospital'
       delete '/doctors/:id',                                 to: 'doctors#delete'
+
+      # list all doctors
+      get '/doctors',                                        to: 'doctors#index'
+      # list all hospitals
+      get '/hospitals',                                      to: 'hospitals#index'
 
       # Feedbacks for doctors
       get    'doctor/:doctor_id/feedbacks',                  to: 'feedbacks#index'
